Fix `Tape` overflow on mobile

--- a/components/Tape/Tape.module.css
+++ b/components/Tape/Tape.module.css
@@ -36,3 +36,9 @@ div.text {
     transform: translateX(calc(-200% + var(--start-offset)));
   }
 }
+
+@media (max-width: 700px) {
+  div.container {
+    overflow: hidden;
+  }
+}
